crates/bevy_ecs_compile_fail_tests/tests/ui/query_iter_combinations_mut_iterator_safety.stderr
error[E0277]: the trait bound `&mut A: ReadOnlyWorldQuery` is not satisfied
  --> tests/ui/query_iter_combinations_mut_iterator_safety.rs:10:17
   |
10 |     is_iterator(iter)
   |     ----------- ^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `&mut A`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ReadOnlyWorldQuery`:
             bevy_ecs::change_detection::Ref<'__w, T>
             Has<T>
             AnyOf<()>
             AnyOf<(F0,)>
             AnyOf<(F0, F1)>
             AnyOf<(F0, F1, F2)>
             AnyOf<(F0, F1, F2, F3)>
             AnyOf<(F0, F1, F2, F3, F4)>
           and $N others
   = note: `ReadOnlyWorldQuery` is implemented for `&A`, but not for `&mut A`
   = note: required for `QueryCombinationIter<'_, '_, &mut A, (), _>` to implement `Iterator`
note: required by a bound in `is_iterator`
  --> tests/ui/query_iter_combinations_mut_iterator_safety.rs:13:19
   |
13 | fn is_iterator<T: Iterator>(_iter: T) {}
   |                   ^^^^^^^^ required by this bound in `is_iterator`
